--- a/style.css
+++ b/style.css
@@ -1,164 +1,1 @@
-@import url(css/fonts.css);
-/* 2012 Pensertrust S.A. de C.V.
-* This CSS File was developed by Pensertrust -> http://pensertrust.com
-*
-* Developer: Samuel Bran -> http://samuelbran.com
-* Date:
-* Project:
-*/
-/* BASIC STYLES
------------------------------------------------------------------------------------------------*/
-* {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  border: none;
-  text-decoration: none;
-  list-style-type: none;
-}
-
-html {
-  height: 100%;
-  background: white;
-}
-
-body {
-  height: 100%;
-  color: #333333;
-}
-
-h1, h2, h3,
-h4, h5, h6 {
-  font-weight: normal;
-}
-
-a {
-  color: #097cde;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-p {
-  margin: 20px 0;
-  line-height: 1.50em;
-  text-align: justify;
-}
-
-img {
-  max-width: 100%;
-}
-
-.clearfloat:after {
-  display: block;
-  content: "";
-  clear: both;
-  visibility: hidden;
-  height: 0;
-}
-
-.float-left {
-  float: left;
-  width: 50%;
-}
-
-.float-right {
-  float: right;
-  width: 50%;
-}
-
-.wrapper {
-  width: 960px;
-  margin: 0 auto;
-  position: relative;
-}
-
-#main {
-  min-height: 500px;
-}
-
-/* =Header
------------------------------------------------------------------------------------------*/
-header {
-  padding-top: 10px;
-  margin-bottom: 20px;
-}
-header #name-desc {
-  float: left;
-}
-header h3 {
-  color: #999999;
-}
-
-/* =Navigation
------------------------------------------------------------------------------------------*/
-nav {
-  padding: 10px 0;
-  float: right;
-}
-nav ul {
-  padding: 0;
-}
-nav ul li {
-  float: left;
-  margin: 0 10px;
-}
-nav ul li:first-child {
-  margin-left: 0;
-}
-nav ul li:last-child {
-  margin-right: 0;
-}
-
-/* =Footer
------------------------------------------------------------------------------------------*/
-footer .float-left {
-  text-align: left;
-}
-footer .author-info {
-  text-align: right;
-}
-
-/* =Error 404 Page
------------------------------------------------------------------------------------------*/
-#error404 {
-  background: url("css/images/alert_bg.png") bottom right no-repeat;
-}
-#error404 h1 {
-  font-size: 7.8125em;
-  color: #c3c3c3;
-}
-#error404 p {
-  color: #a4a4a4;
-}
-#error404 .go-home:hover {
-  text-decoration: underline;
-}
-#error404 .go-home span {
-  font-size: 1.1666666666666666666666666666667em;
-}
-
-/* =Pensertrust
------------------------------------------------------------------------------------------*/
-.pensertrust {
-  position: relative;
-  top: 2px;
-  width: 86px;
-  height: 16px;
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  .wrapper {
-    width: 90%;
-  }
-
-  #name-desc, nav {
-    float: none;
-    width: 100%;
-  }
-
-  #name-desc {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-}
+@font-face{font-family:'OpenSansLight';src:url("css/fonts/OpenSans-Light-webfont.eot");src:url("css/fonts/OpenSans-Light-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-Light-webfont.woff") format("woff"),url("css/fonts/OpenSans-Light-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-Light-webfont.svg#OpenSansLight") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansLightItalic';src:url("css/fonts/OpenSans-LightItalic-webfont.eot");src:url("css/fonts/OpenSans-LightItalic-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-LightItalic-webfont.woff") format("woff"),url("css/fonts/OpenSans-LightItalic-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-LightItalic-webfont.svg#OpenSansLightItalic") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansRegular';src:url("css/fonts/OpenSans-Regular-webfont.eot");src:url("css/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-Regular-webfont.woff") format("woff"),url("css/fonts/OpenSans-Regular-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-Regular-webfont.svg#OpenSansRegular") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansItalic';src:url("css/fonts/OpenSans-Italic-webfont.eot");src:url("css/fonts/OpenSans-Italic-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-Italic-webfont.woff") format("woff"),url("css/fonts/OpenSans-Italic-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-Italic-webfont.svg#OpenSansItalic") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansSemibold';src:url("css/fonts/OpenSans-Semibold-webfont.eot");src:url("css/fonts/OpenSans-Semibold-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-Semibold-webfont.woff") format("woff"),url("css/fonts/OpenSans-Semibold-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansSemiboldItalic';src:url("css/fonts/OpenSans-SemiboldItalic-webfont.eot");src:url("css/fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-SemiboldItalic-webfont.woff") format("woff"),url("css/fonts/OpenSans-SemiboldItalic-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-SemiboldItalic-webfont.svg#OpenSansSemiboldItalic") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansBold';src:url("css/fonts/OpenSans-Bold-webfont.eot");src:url("css/fonts/OpenSans-Bold-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-Bold-webfont.woff") format("woff"),url("css/fonts/OpenSans-Bold-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-Bold-webfont.svg#OpenSansBold") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansBoldItalic';src:url("css/fonts/OpenSans-BoldItalic-webfont.eot");src:url("css/fonts/OpenSans-BoldItalic-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-BoldItalic-webfont.woff") format("woff"),url("css/fonts/OpenSans-BoldItalic-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansExtrabold';src:url("css/fonts/OpenSans-ExtraBold-webfont.eot");src:url("css/fonts/OpenSans-ExtraBold-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-ExtraBold-webfont.woff") format("woff"),url("css/fonts/OpenSans-ExtraBold-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-ExtraBold-webfont.svg#OpenSansExtrabold") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'OpenSansExtraboldItalic';src:url("css/fonts/OpenSans-ExtraBoldItalic-webfont.eot");src:url("css/fonts/OpenSans-ExtraBoldItalic-webfont.eot?#iefix") format("embedded-opentype"),url("css/fonts/OpenSans-ExtraBoldItalic-webfont.woff") format("woff"),url("css/fonts/OpenSans-ExtraBoldItalic-webfont.ttf") format("truetype"),url("css/fonts/OpenSans-ExtraBoldItalic-webfont.svg#OpenSansExtraboldItalic") format("svg");font-weight:normal;font-style:normal}/* normalize.css 2011-11-04T15:38 UTC - http://github.com/necolas/normalize.css */article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none}[hidden]{display:none}html{font-size:100%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}body,button,input,select,textarea{font-family:"OpenSansRegular","Geneva",Verdana,"Lucida Sans","Lucida Grande","Lucida Sans Unicode",sans-serif}a:focus{outline:thin dotted}a:hover,a:active{outline:0}h1{font-size:2em}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}mark{background:#ff0;color:#000}pre,code,kbd,samp{font-family:monospace,serif;_font-family:"courier new",monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:75%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}ul,ol{margin-left:0;padding:0 0 0 40px}dd{margin:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button;*overflow:visible}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}*{margin:0;padding:0;outline:0;border:none;text-decoration:none;list-style-type:none}html,body{height:100%}h1,h2,h3,h4,h5,h6{font-weight:normal}a{text-decoration:none}a:hover{text-decoration:underline}p{line-height:1.5em}img{max-width:100%}.clearfloat:after{display:block;content:"";clear:both;visibility:hidden;height:0}.float-left{float:left;width:50%}.float-right{float:right;width:50%}.wrapper{width:90%;max-width:1000px;margin:0 auto;position:relative}nav ul{padding:0}nav ul li:first-child{margin-left:0}nav ul li:last-child{margin-right:0}#error404{background:url("css/images/alert_bg.png") bottom right no-repeat}#error404 h1{font-size:7.8125em;color:#c3c3c3}#error404 p{color:#a4a4a4}#error404 .go-home:hover{text-decoration:underline}#error404 .go-home span{font-size:1.1666666666666666666666666666667em}
