--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 @import "normalize.scss";
 
 /* BASIC STYLES
------------------------------------------------------------------------------------------------*/
+----------------------------------------------------------------------------------------*/
 * {
 	margin: 0;
 	padding: 0;
@@ -62,16 +62,18 @@ img {
 .sidebar {}
 
 /* =Header
------------------------------------------------------------------------------------------*/
+----------------------------------------------------------------------------------------*/
 
 /* =Navigation
------------------------------------------------------------------------------------------*/
+----------------------------------------------------------------------------------------*/
 nav {
 
 	ul {
 		padding: 0;
 
 		li {
+
+			display: inline-block;
 
 			&:first-child {
 				margin-left: 0;
@@ -90,10 +92,32 @@ nav {
 }
 
 /* =Footer
------------------------------------------------------------------------------------------*/
+----------------------------------------------------------------------------------------*/
+
+/* =Contacto
+----------------------------------------------------------------------------------------*/
+#contacto {
+
+	form {
+		background: #f8f8f8;
+		padding: 2%;
+
+		label {
+			display: block;
+			margin: 1% 0;
+
+			& > span {
+				display: inline-block;
+				width: 10%;
+				text-align: right;
+				margin-right: 1%;
+			}
+		}
+	}
+}
 
 /* =Error 404 Page
------------------------------------------------------------------------------------------*/
+----------------------------------------------------------------------------------------*/
 #error404 {
 	background: url("css/images/alert_bg.png") bottom right no-repeat;
 
@@ -117,4 +141,16 @@ nav {
 		}
 
 	}
+}
+
+/* =Messages
+----------------------------------------------------------------------------------------*/
+.info {
+	background: #5d5d5d;
+	padding: 1%;
+	color: #fff;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
+}
+.success {
+	background: #5db41c;
 }
